Suppression des références personnelles et remplacement par un utilisateur de démonstration dans la page offres

--- a/templates/candidate-offers.html
+++ b/templates/candidate-offers.html
@@ -977,7 +977,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
-                    <li><a href="candidate-dashboard.html?email=jean-olivier.penin%40b-acceptance.com&password=s" class="active">Espace candidat</a></li>
+                    <li><a href="candidate-dashboard.html?email=demo.utilisateur%40nexten.fr&password=s" class="active">Espace candidat</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -987,7 +987,7 @@
     <div class="container main-container" id="main-content">
         <!-- Breadcrumb amélioré -->
         <div class="breadcrumb fade-in">
-            <a href="candidate-dashboard.html?email=jean-olivier.penin%40b-acceptance.com&password=s">
+            <a href="candidate-dashboard.html?email=demo.utilisateur%40nexten.fr&password=s">
                 <i class="fas fa-home"></i> Tableau de bord
             </a>
             <span>›</span>
@@ -996,11 +996,11 @@
         
         <!-- Navigation contextuelle avec flèches pour changer de page -->
         <div class="contextual-nav fade-in">
-            <a href="candidate-opportunities.html?email=jean-olivier.penin%40b-acceptance.com&password=s" class="previous-page" data-tooltip="Page précédente">
+            <a href="candidate-opportunities.html?email=demo.utilisateur%40nexten.fr&password=s" class="previous-page" data-tooltip="Page précédente">
                 <i class="fas fa-chevron-left"></i> Mes opportunités
             </a>
             
-            <a href="candidate-dashboard.html?email=jean-olivier.penin%40b-acceptance.com&password=s" class="dashboard-link" data-tooltip="Retour au tableau de bord">
+            <a href="candidate-dashboard.html?email=demo.utilisateur%40nexten.fr&password=s" class="dashboard-link" data-tooltip="Retour au tableau de bord">
                 <i class="fas fa-th-large"></i> Tableau de bord
             </a>
             
@@ -1052,7 +1052,7 @@
                 <button class="nav-button" id="preferencesBtn">
                     <i class="fas fa-sliders-h"></i> Préférences
                 </button>
-                <a href="candidate-dashboard.html?email=jean-olivier.penin%40b-acceptance.com&password=s" class="nav-button">
+                <a href="candidate-dashboard.html?email=demo.utilisateur%40nexten.fr&password=s" class="nav-button">
                     <i class="fas fa-th-large"></i> Dashboard
                 </a>
             </div>
@@ -1407,7 +1407,7 @@
                     <h4 class="footer-heading">Navigation</h4>
                     <ul class="footer-links">
                         <li><a href="index.html"><i class="fas fa-chevron-right"></i> Accueil</a></li>
-                        <li><a href="candidate-dashboard.html?email=jean-olivier.penin%40b-acceptance.com&password=s"><i class="fas fa-chevron-right"></i> Espace candidat</a></li>
+                        <li><a href="candidate-dashboard.html?email=demo.utilisateur%40nexten.fr&password=s"><i class="fas fa-chevron-right"></i> Espace candidat</a></li>
                         <li><a href="#"><i class="fas fa-chevron-right"></i> À propos</a></li>
                         <li><a href="#contact"><i class="fas fa-chevron-right"></i> Contact</a></li>
                     </ul>
