Ajout de la redirection vers le tableau de bord

--- a/templates/candidate-page.html
+++ b/templates/candidate-page.html
@@ -1093,7 +1093,7 @@
                     <li><a href="#">Accueil</a></li>
                     <li><a href="#" class="active">Gestion des candidats</a></li>
                     <li><a href="#">Postes</a></li>
-                    <li><a href="#">Tableau de bord</a></li>
+                    <li><a href="candidate-dashboard.html">Tableau de bord</a></li>
                 </ul>
             </nav>
         </div>
